welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:4: error: not found: type color
def faireV(c:color){
             ^